BooksApi: recommendations
